# mega-math

./: .clippy.toml  .gitignore  CODESTYLE.md  Cargo.toml  DEVELOPERS.md  Makefile  README.md  TODO.md
crates/matrix/: Cargo.toml
crates/matrix/src/: errors.rs  lib.rs  matrix.rs
crates/matrix/src/matrix/: add.rs  mul.rs  neg.rs  sub.rs  transpose.rs
template/: Cargo.toml
