[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Группы (priority = -1, чтобы индивидуальные переопределения ниже работали)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Педантичные линты, которые слишком шумят
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"

# Выборочные restriction-линты (вся группа — перебор, но эти полезны)
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "warn"
get_unwrap = "warn"
todo = "warn"
unimplemented = "warn"
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
empty_structs_with_brackets = "warn"
format_push_string = "warn"
lossy_float_literal = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
verbose_file_reads = "warn"
